--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-imagefield==0.16.0
 djangorestframework==3.13.1
 dnspython==2.2.1
 email-validator==1.2.1
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.13.7
 httpx==0.18.2
@@ -16,6 +17,7 @@ idna==3.3
 Pillow==9.1.1
 pydantic==1.9.1
 python-dateutil==2.8.2
+python-decouple==3.6
 pytz==2021.3
 pyuploadcare==3.0.0
 rfc3986==1.5.0
@@ -24,3 +26,4 @@ sniffio==1.2.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
+whitenoise==6.2.0
